habit-atom-k3d/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: habit-atom-ns
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
