habit-atom-k3d/postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: habit-atom-ns
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
