habit-atom-k3d/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habit-atom-ingress
  namespace: habit-atom-ns
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
